src/main/java/com/example/hospital/Error/NotFoundException.java
package com.example.hospital.Error;

public class NotFoundException extends RuntimeException{

    public NotFoundException() {
        super();
    }

    public NotFoundException(String message) {
        super(message);
    }
}
